<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_brush"
        android:icon="@drawable/ic_baseline_color_lens_24"
        android:title="@string/brush"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_baseline_undo_24"
        android:title="@string/undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_baseline_redo_24"
        android:title="@string/redo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/clear"
        app:showAsAction="always" />
</menu>