<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="320dp"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/slides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/switch_3d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_red"

            app:layout_constraintBottom_toBottomOf="@id/slider_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/slider_red" />

        <TextView
            android:id="@+id/label_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_green"
            app:layout_constraintBottom_toBottomOf="@id/slider_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/slider_green" />

        <TextView
            android:id="@+id/label_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_blue"
            app:layout_constraintBottom_toBottomOf="@id/slider_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/slider_blue" />

        <TextView
            android:id="@+id/label_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_width"
            app:layout_constraintBottom_toBottomOf="@id/slider_width"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/slider_width" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="label_blue, label_green, label_red, label_width" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/color_red"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="255"
            app:layout_constraintBottom_toTopOf="@id/slider_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toTopOf="parent"
            app:tickVisible="false" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/color_green"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="255"
            app:layout_constraintBottom_toTopOf="@id/slider_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/slider_red"
            app:tickVisible="false" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/color_blue"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="255"
            app:layout_constraintBottom_toTopOf="@id/slider_width"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/slider_green"
            app:tickVisible="false" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_width"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/brush_width"
            android:valueFrom="0"
            android:valueTo="200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/slider_blue" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_3d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3d_touch"
        app:layout_constraintBottom_toTopOf="@id/previewLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slides" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/previewLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_3d">

        <stkq.draw.BrushPreview
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>